# wasm-audio-effect-rack

./: .gitignore  Pipfile  README.md  compile-protoc2.sh  package.json  tasks.py
.github/workflows/: python-client.yml  test.yml
arduino/led_serial/: led_serial.ino
disco/: Cargo.toml  package.json
disco/analysis/src/: fft.rs  lib.rs  spectral.rs
disco/bpm-detection/: Cargo.toml
disco/bpm-detection/src/: cli.rs  lib.rs
disco/common/: Cargo.toml
disco/common/src/: errors.rs  sorting.rs  synth.rs
disco/hardware/src/: led.rs
disco/proto/: build.rs
disco/proto/src/: lib.rs
disco/recorder/: Cargo.toml  build.rs
disco/recorder/src/: cpal.rs  lib.rs
disco/src/: analyzer.rs  cli.rs  controller.rs  lib.rs  main.rs  retry.rs  session.rs  viewer.rs
disco/src-tauri/: tauri.conf.json
docs/: README.md
effectrack/: Cargo.toml
effectrack/analysis/: Cargo.toml
effectrack/analysis/src/: bpm.rs  lib.rs  mel.rs  spectral.rs  windows.rs
effectrack/analysis/src/filters/: exp.rs  gaussian.rs
effectrack/analyzer/: Cargo.toml
effectrack/analyzer/src/: fft.rs  lib.rs  mel.rs  spectral.rs  windows.rs
effectrack/analyzer/src/filters/: gaussian.rs
effectrack/bpm-detection/src/: lib.rs
effectrack/common/src/: filters.rs  lib.rs  sorting.rs
effectrack/hardware/: Cargo.toml
effectrack/hardware/src/: led.rs
effectrack/proto/: Cargo.toml  build.rs
effectrack/proto/src/: lib.rs
effectrack/recorder/: Cargo.toml
effectrack/recorder/src/: cpal.rs  lib.rs  portaudio.rs
effectrack/recorder/src/backend/: cpal.rs  portaudio.rs
effectrack/server/: Cargo.toml
effectrack/server/src/: analyzer.rs  beep.rs  cli.rs  controller.rs  main.rs  main_warp.rs  p2p.rs  session.rs  viewer.rs
effectrack/src-tauri/: tauri.conf.json
effectrack/src/filters/: filters.rs
effectrack/src/synth/: synthesizer.rs
experimental/: Pipfile  README.md  audioanalyzer.py  audioplayer.py  melbank.py
proto/audio/: analysis.proto
proto/audio/analysis/: analysis.proto  bpm.proto  spectral.proto
proto/grpc/: connection.proto  controller.proto  descriptors.proto  remote.proto  session.proto  viewer.proto  visualization.proto
python/: .gitignore  Cargo.toml.cibuildwheel  MANIFEST.in  Pipfile  build.sh  compile-protoc.sh  cross-compile-protoc.sh  disco-src  example.py  install-dependencies.sh  pyproject.toml  setup.cfg  setup.py
python-client/: .coverage  Cargo.toml  Dockerfile  MANIFEST.in  Pipfile  README.md  build.sh  example.py  setup.cfg  setup.py  tasks.py
python-client/.eggs/m2r-0.2.1-py3.8.egg/EGG-INFO/: PKG-INFO  RECORD
python-client/cibuildwheel.out/: discodisco-0.1.0-cp38-cp38-manylinux_2_17_i686.manylinux2014_i686.whl  discodisco-0.1.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
python-client/discodisco/: __init__.py  cli.py
python-client/discodisco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-client/src/: lib.rs
python-client/tests/: test_pydisco.py
python/discodisco/: __init__.py  disco.py
python/src/: lib.rs
web/: tsconfig.json  workspaces.js
web/controller/: index.ts  package.json  tsconfig.json
web/controller/src/: Controller.tsx  controller.ts
web/controls/: index.ts  package.json
web/controls/src/: controls.ts
web/core/: package.json  tsconfig.json
web/core/audio/: analysis.ts
web/core/grpc/: controller.ts  index.ts  viewer.ts
web/core/remote/: index.ts
web/core/utils/: math.ts  ringbuffer.ts  search.ts  transitions.ts  volume.ts
web/core/utils/functions/: index.ts
web/disco/: config-overrides.js  package.json  tsconfig.json  tsconfig.workers.json
web/disco/public/: index.html
web/disco/public/workers/: bpm-detection-worker.js
web/disco/src/: App.tsx
web/disco/src/deprecated/: Fractal1.tsx
web/disco/src/nodes/: utils.ts
web/disco/types/: audio-worklet-global-scope.d.ts
web/launcher/: .env  package.json  tsconfig.json
web/launcher/src/: controller.ts
web/viewer/: index.ts  package.json  tsconfig.json
web/viewer/src/: Viewer.tsx  viewer.ts
web/visuals/: package.json  tsconfig.json
web/visuals/fonts/: index.ts
web/visuals/fonts/Lyno/: Lyno Ulys_Regular.json
web/visuals/fractal-tunnel/: Fractal1.tsx  index.ts  parameterizer.ts  visualization.ts
web/visuals/gallery/: index.ts
web/visuals/parameterizer/: index.ts
web/visuals/text-transform/: index.ts  parameterizer.ts  visualization.ts  worker.d.ts  worker.d.ts.map  worker.js  worker.js.map  worker.ts
web/visuals/visualization/: index.ts
web/workers/: package.json  tsconfig.json
www/: .gitignore  config-overrides.js  gen-protos.sh  package.json  tsconfig.json
www/public/workers/: bpm-detection-node-processor.js
www/src/: App.sass  App.tsx  Controller.tsx  Fractal1.tsx  Landing.tsx  TextTransform.tsx  Viewer.tsx  stats.ts  utils.ts
www/src/communication/: communicator.ts  p2p.ts  websocket.ts
www/src/controls/: midi.ts
www/src/fonts/: Inter ExtraBold_Regular.json
www/src/fonts/Lyno/: Lyno Jean_Regular.json  Lyno Stan_Regular.json  Lyno Walt_Regular.json
www/src/nodes/: bpm-detection.ts  common.ts  node-processor.worker.ts  utils.ts
www/src/remote/: controller.ts  index.ts  interceptors.ts  viewer.ts
www/src/utils/: filters.ts  math.ts  sort.ts
www/src/visualizations/: controls.ts  gallery.ts  parameterizer.ts  visualization.ts
www/src/visualizations/text-transform/: index.ts  parameterizer.ts  visualization.ts
www/src/workers/: bpm-detection-node-processor.ts
