[package]
name = "disco"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
nanoid = "0.4.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
libp2p = { version = "0.39", optional = true, features = ["tcp-tokio"] }
ringbuf = "0.2"
chrono = "0.4"
http = "0.2.4"
http-body = "0.4.3"
tower = "0.4.8"
tower-http = "0.1.1"
hyper = "0.14.12"
warp = "0.3.1"
tonic = "0.5"
tonic-web = "0.1"
prost = "0.8"
prost-types = "0.8"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["signal", "rt-multi-thread", "macros", "sync", "time", "fs", "rt", "io-util", "io-std"] }
tokio-stream = "0.1"
async-stream = "0.2"
rand = "0.7"
clap = "3.0.0-beta.2"
anyhow = "1.0.42"
cfg-if = "0.1"
ndarray = { version = "0.15.0" , features = ["approx", "rayon"]}
num = "0.4.0"
async-trait = "0.1.51"
recorder = { path = "./recorder" }
analysis = { path = "./analysis" }
hardware = { path = "./hardware" }
proto = { path = "./proto" }
common = { path = "./common" }

[workspace]
members = [
  "bpm-detection",
  "src-tauri",
]

[features]
default = ["record", "analyze"]
analyze = []
record = []
p2p = ["libp2p"]
portaudio = ["recorder/portaudio"]
jack = ["recorder/jack"]

[build-dependencies]
build = { path = "./build" }

# [build-dependencies]
# tonic-build = { version = "0.5", features = ["prost", "compression"] }

[profile.release]
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.dev]
debug-assertions = true
