[package]
name = "effectrack"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "bpm-detection"
]


[profile.release]
debug-assertions = false
panic = "abort"
#debug = 1
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.dev]
debug-assertions = true
