[package]
name = "pydisco"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2018"

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
tokio = { version = "1.0", features = ["signal", "rt-multi-thread", "macros", "sync", "time", "fs", "rt", "io-util", "io-std"] }
disco = { path = "../disco"}

[features]
default = ["record", "analyze"]
analyze = ["disco/analyze"]
record = ["disco/record"]
p2p = ["disco/p2p"]
portaudio = ["disco/portaudio"]
jack = ["disco/jack"]


[lib]
name = "disco"
crate-type = ["cdylib"]
