[package]
name = "bpm-detection"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
clap = "3.0.0-beta.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
ndarray = "0.15.0"
common = { path = "../common" }
