[package]
name = "recorder"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.42"
cfg-if = "0.1"
num = "0.4.0"
ndarray = "0.15.0"
rodio = "0.14.0"
cpal = "0.13.3"
portaudio = { version = "0.7.0", optional = true }
hound = { version = "3.4.0", optional = true }
proto = { path = "../proto" }

# minimp3 = { version = "0.5.1", optional = true }
# lewton = { version = "0.10.2", optional = true }
# claxon = { version = "0.4.3", optional = true }

[features]
# default = ["record", "wav", "vorbis", "flac", "mp3"]
# default = ["input", "record", "wav", "vorbis", "flac"]
# input = ["cpal"]
# portaudio = ["portaudio"]
# default = ["record", "wav", "vorbis", "flac"]

default = ["record"]
record = ["hound"]
# wav = ["hound"]
# mp3 = ["minimp3"]
# vorbis = ["lewton"]
# flac = ["claxon"]
jack = ["cpal/jack"]

[build-dependencies]
build = { path = "../build" }
